CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

SET(CMAKE_SYSTEM_NAME Generic)
SET(CMAKE_SYSTEM_PROCESSOR cortex-m3)
#SET(CMAKE_VERBOSE_MAKEFILE ON)

SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)

SET(CMAKE_C_COMPILER "D:/env/env-windows-1.5.0/tools/bin/../../tools/gnu_gcc/arm_gcc/mingw/bin/arm-none-eabi-gcc.exe")
SET(CMAKE_ASM_COMPILER "D:/env/env-windows-1.5.0/tools/bin/../../tools/gnu_gcc/arm_gcc/mingw/bin/arm-none-eabi-gcc.exe")
SET(CMAKE_C_FLAGS " -mcpu=cortex-m3 -mthumb -ffunction-sections -fdata-sections -Dgcc -O0 -gdwarf-2 -g")
SET(CMAKE_ASM_FLAGS " -c -mcpu=cortex-m3 -mthumb -ffunction-sections -fdata-sections -x assembler-with-cpp -Wa,-mimplicit-it=thumb  -gdwarf-2")
SET(CMAKE_C_COMPILER_WORKS TRUE)

SET(CMAKE_CXX_COMPILER "D:/env/env-windows-1.5.0/tools/bin/../../tools/gnu_gcc/arm_gcc/mingw/bin/arm-none-eabi-g++.exe")
SET(CMAKE_CXX_FLAGS " -mcpu=cortex-m3 -mthumb -ffunction-sections -fdata-sections -Dgcc -O0 -gdwarf-2 -g")
SET(CMAKE_CXX_COMPILER_WORKS TRUE)

SET(CMAKE_OBJCOPY "D:/env/env-windows-1.5.0/tools/bin/../../tools/gnu_gcc/arm_gcc/mingw/bin/arm-none-eabi-objcopy.exe")
SET(CMAKE_SIZE "D:/env/env-windows-1.5.0/tools/bin/../../tools/gnu_gcc/arm_gcc/mingw/bin/arm-none-eabi-size.exe")

SET(CMAKE_EXE_LINKER_FLAGS " -mcpu=cortex-m3 -mthumb -ffunction-sections -fdata-sections -Wl,--gc-sections,-Map=rt-thread.map,-cref,-u,Reset_Handler -T ${CMAKE_SOURCE_DIR}/board/linker_scripts/link.lds")

SET(CMAKE_CXX_STANDARD 14)
PROJECT(rtthread C CXX ASM)
INCLUDE_DIRECTORIES(
	_drv
	applications
	rt-thread/components/net/at/include
	packages/cJSON-v1.7.17
	rt-thread/components/libc/compilers/common/include
	rt-thread/components/libc/compilers/newlib
	_drv/lvgl/demo
	rt-thread/components/drivers/include
	board
	board/CubeMX_Config/Inc
	libraries/HAL_Drivers/drivers
	libraries/HAL_Drivers/drivers/config
	libraries/HAL_Drivers
	libraries/HAL_Drivers/CMSIS/Include
	rt-thread/components/dfs/dfs_v1/include
	rt-thread/components/dfs/dfs_v1/filesystems/devfs
	rt-thread/components/finsh
	packages/gui_guider_demo-latest
	packages/gui_guider_demo-latest/custom
	packages/gui_guider_demo-latest/generated
	packages/gui_guider_demo-latest/generated/guider_customer_fonts
	packages/gui_guider_demo-latest/generated/guider_fonts
	packages/gui_guider_demo-latest/generated/images
	_drv/il9341
	.
	rt-thread/include
	rt-thread/libcpu/arm/common
	rt-thread/libcpu/arm/cortex-m3
	libraries/STM32F1xx_HAL/CMSIS/Device/ST/STM32F1xx/Include
	libraries/STM32F1xx_HAL/STM32F1xx_HAL_Driver/Inc
	packages/LVGL-v8.3.11/src
	packages/LVGL-v8.3.11/src/core
	packages/LVGL-v8.3.11/src/draw
	packages/LVGL-v8.3.11/src/extra
	packages/LVGL-v8.3.11/src/font
	packages/LVGL-v8.3.11/src/hal
	packages/LVGL-v8.3.11/src/misc
	packages/LVGL-v8.3.11/src/widgets
	packages/LVGL-v8.3.11/src/draw/arm2d
	packages/LVGL-v8.3.11/src/draw/renesas
	packages/LVGL-v8.3.11/src/draw/sdl
	packages/LVGL-v8.3.11/src/draw/stm32_dma2d
	packages/LVGL-v8.3.11/src/draw/sw
	packages/LVGL-v8.3.11/src/draw/swm341_dma2d
	packages/LVGL-v8.3.11/src/draw/nxp/pxp
	packages/LVGL-v8.3.11/src/draw/nxp/vglite
	packages/LVGL-v8.3.11/src/extra/layouts
	packages/LVGL-v8.3.11/src/extra/libs
	packages/LVGL-v8.3.11/src/extra/others
	packages/LVGL-v8.3.11/src/extra/themes
	packages/LVGL-v8.3.11/src/extra/widgets
	packages/LVGL-v8.3.11/src/extra/layouts/flex
	packages/LVGL-v8.3.11/src/extra/layouts/grid
	packages/LVGL-v8.3.11/src/extra/libs/bmp
	packages/LVGL-v8.3.11/src/extra/libs/ffmpeg
	packages/LVGL-v8.3.11/src/extra/libs/freetype
	packages/LVGL-v8.3.11/src/extra/libs/fsdrv
	packages/LVGL-v8.3.11/src/extra/libs/gif
	packages/LVGL-v8.3.11/src/extra/libs/png
	packages/LVGL-v8.3.11/src/extra/libs/qrcode
	packages/LVGL-v8.3.11/src/extra/libs/rlottie
	packages/LVGL-v8.3.11/src/extra/libs/sjpg
	packages/LVGL-v8.3.11/src/extra/libs/tiny_ttf
	packages/LVGL-v8.3.11/src/extra/others/fragment
	packages/LVGL-v8.3.11/src/extra/others/gridnav
	packages/LVGL-v8.3.11/src/extra/others/ime
	packages/LVGL-v8.3.11/src/extra/others/imgfont
	packages/LVGL-v8.3.11/src/extra/others/monkey
	packages/LVGL-v8.3.11/src/extra/others/msg
	packages/LVGL-v8.3.11/src/extra/others/snapshot
	packages/LVGL-v8.3.11/src/extra/themes/basic
	packages/LVGL-v8.3.11/src/extra/themes/default
	packages/LVGL-v8.3.11/src/extra/themes/mono
	packages/LVGL-v8.3.11/src/extra/widgets/animimg
	packages/LVGL-v8.3.11/src/extra/widgets/calendar
	packages/LVGL-v8.3.11/src/extra/widgets/chart
	packages/LVGL-v8.3.11/src/extra/widgets/colorwheel
	packages/LVGL-v8.3.11/src/extra/widgets/imgbtn
	packages/LVGL-v8.3.11/src/extra/widgets/keyboard
	packages/LVGL-v8.3.11/src/extra/widgets/led
	packages/LVGL-v8.3.11/src/extra/widgets/list
	packages/LVGL-v8.3.11/src/extra/widgets/menu
	packages/LVGL-v8.3.11/src/extra/widgets/meter
	packages/LVGL-v8.3.11/src/extra/widgets/msgbox
	packages/LVGL-v8.3.11/src/extra/widgets/span
	packages/LVGL-v8.3.11/src/extra/widgets/spinbox
	packages/LVGL-v8.3.11/src/extra/widgets/spinner
	packages/LVGL-v8.3.11/src/extra/widgets/tabview
	packages/LVGL-v8.3.11/src/extra/widgets/tileview
	packages/LVGL-v8.3.11/src/extra/widgets/win
	_drv/lvgl
	packages/LVGL-v8.3.11/env_support/rt-thread
	_drv/m1820
	packages/mbedtls-v2.28.1/mbedtls/include
	packages/mbedtls-v2.28.1/mbedtls/library
	packages/mbedtls-v2.28.1/ports/inc
	rt-thread/components/libc/posix/io/epoll
	rt-thread/components/libc/posix/io/eventfd
	rt-thread/components/libc/posix/io/poll
	rt-thread/components/libc/posix/ipc
	rt-thread/components/net/netdev/include
	rt-thread/components/net/sal/include
	rt-thread/components/net/sal/include/socket
	rt-thread/components/net/sal/include/dfs_net
	rt-thread/components/net/sal/include/socket/sys_socket
	rt-thread/components/utilities/resource
)

ADD_DEFINITIONS(
	-DLV_LVGL_H_INCLUDE_SIMPLE=1
	-DRT_USING_LIBC
	-DRT_USING_NEWLIBC
	-DSTM32F103xE
	-DUSE_HAL_DRIVER
	-D_POSIX_C_SOURCE=1
	-D__RTTHREAD__
)

SET(PROJECT_SOURCES
	_drv/button.c
	_drv/beep.c
	_drv/led.c
	_drv/decode.c
	_drv/bc260y.c
	applications/main.c
	rt-thread/components/net/at/src/at_utils.c
	rt-thread/components/net/at/src/at_client.c
	rt-thread/components/net/at/src/at_cli.c
	packages/cJSON-v1.7.17/cJSON.c
	packages/cJSON-v1.7.17/cJSON_Utils.c
	rt-thread/components/libc/compilers/common/cctype.c
	rt-thread/components/libc/compilers/common/cstdlib.c
	rt-thread/components/libc/compilers/common/cstring.c
	rt-thread/components/libc/compilers/common/ctime.c
	rt-thread/components/libc/compilers/common/cunistd.c
	rt-thread/components/libc/compilers/common/cwchar.c
	rt-thread/components/libc/compilers/newlib/syscalls.c
	_drv/lvgl/demo/lv_demo.c
	_drv/lvgl/demo/lv_demo_calendar.c
	rt-thread/components/drivers/core/device.c
	rt-thread/components/drivers/ipc/completion.c
	rt-thread/components/drivers/ipc/condvar.c
	rt-thread/components/drivers/ipc/dataqueue.c
	rt-thread/components/drivers/ipc/pipe.c
	rt-thread/components/drivers/ipc/ringblk_buf.c
	rt-thread/components/drivers/ipc/ringbuffer.c
	rt-thread/components/drivers/ipc/waitqueue.c
	rt-thread/components/drivers/ipc/workqueue.c
	rt-thread/components/drivers/misc/rt_drv_pwm.c
	rt-thread/components/drivers/pin/pin.c
	rt-thread/components/drivers/rtc/rtc.c
	rt-thread/components/drivers/serial/serial.c
	board/CubeMX_Config/Src/stm32f1xx_hal_msp.c
	board/board.c
	libraries/HAL_Drivers/drivers/drv_gpio.c
	libraries/HAL_Drivers/drivers/drv_pwm.c
	libraries/HAL_Drivers/drivers/drv_tim.c
	libraries/HAL_Drivers/drivers/drv_usart.c
	libraries/HAL_Drivers/drv_common.c
	libraries/STM32F1xx_HAL/CMSIS/Device/ST/STM32F1xx/Source/Templates/gcc/startup_stm32f103xe.s
	rt-thread/components/dfs/dfs_v1/filesystems/devfs/devfs.c
	rt-thread/components/dfs/dfs_v1/src/dfs.c
	rt-thread/components/dfs/dfs_v1/src/dfs_file.c
	rt-thread/components/dfs/dfs_v1/src/dfs_fs.c
	rt-thread/components/dfs/dfs_v1/src/dfs_posix.c
	rt-thread/components/finsh/shell.c
	rt-thread/components/finsh/msh.c
	rt-thread/components/finsh/msh_parse.c
	rt-thread/components/finsh/cmd.c
	rt-thread/components/finsh/msh_file.c
	packages/gui_guider_demo-latest/lv_gui_guider_demo.c
	packages/gui_guider_demo-latest/generated/setup_scr_screen.c
	packages/gui_guider_demo-latest/generated/guider_fonts/lv_font_simsun_12.c
	packages/gui_guider_demo-latest/generated/events_init.c
	packages/gui_guider_demo-latest/custom/custom.c
	packages/gui_guider_demo-latest/generated/gui_guider.c
	_drv/il9341/fonts.c
	_drv/il9341/ili9341.c
	_drv/il9341/lcd_thread.c
	_drv/il9341/ili9341_touch.c
	rt-thread/src/clock.c
	rt-thread/src/components.c
	rt-thread/src/idle.c
	rt-thread/src/ipc.c
	rt-thread/src/irq.c
	rt-thread/src/klibc/kstdio.c
	rt-thread/src/klibc/kstring.c
	rt-thread/src/kservice.c
	rt-thread/src/mem.c
	rt-thread/src/mempool.c
	rt-thread/src/object.c
	rt-thread/src/scheduler_comm.c
	rt-thread/src/scheduler_up.c
	rt-thread/src/thread.c
	rt-thread/src/timer.c
	rt-thread/libcpu/arm/common/atomic_arm.c
	rt-thread/libcpu/arm/common/div0.c
	rt-thread/libcpu/arm/common/showmem.c
	rt-thread/libcpu/arm/cortex-m3/context_gcc.S
	rt-thread/libcpu/arm/cortex-m3/cpuport.c
	libraries/STM32F1xx_HAL/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_rcc_ex.c
	libraries/STM32F1xx_HAL/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_cortex.c
	libraries/STM32F1xx_HAL/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_rtc_ex.c
	libraries/STM32F1xx_HAL/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_gpio_ex.c
	libraries/STM32F1xx_HAL/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_rtc.c
	libraries/STM32F1xx_HAL/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_rcc.c
	libraries/STM32F1xx_HAL/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_pwr.c
	libraries/STM32F1xx_HAL/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_dma.c
	libraries/STM32F1xx_HAL/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_tim_ex.c
	libraries/STM32F1xx_HAL/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_tim.c
	libraries/STM32F1xx_HAL/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_crc.c
	libraries/STM32F1xx_HAL/CMSIS/Device/ST/STM32F1xx/Source/Templates/system_stm32f1xx.c
	libraries/STM32F1xx_HAL/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_uart.c
	libraries/STM32F1xx_HAL/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_sram.c
	libraries/STM32F1xx_HAL/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal.c
	libraries/STM32F1xx_HAL/STM32F1xx_HAL_Driver/Src/stm32f1xx_ll_fsmc.c
	libraries/STM32F1xx_HAL/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_cec.c
	libraries/STM32F1xx_HAL/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_usart.c
	libraries/STM32F1xx_HAL/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_gpio.c
	packages/LVGL-v8.3.11/src/core/lv_disp.c
	packages/LVGL-v8.3.11/src/draw/lv_img_cache.c
	packages/LVGL-v8.3.11/src/misc/lv_math.c
	packages/LVGL-v8.3.11/src/draw/sdl/lv_draw_sdl.c
	packages/LVGL-v8.3.11/src/extra/themes/basic/lv_theme_basic.c
	packages/LVGL-v8.3.11/src/draw/nxp/vglite/lv_draw_vglite_line.c
	packages/LVGL-v8.3.11/src/widgets/lv_objx_templ.c
	packages/LVGL-v8.3.11/src/extra/libs/fsdrv/lv_fs_posix.c
	packages/LVGL-v8.3.11/src/draw/lv_img_buf.c
	packages/LVGL-v8.3.11/src/widgets/lv_switch.c
	packages/LVGL-v8.3.11/src/font/lv_font_unscii_16.c
	packages/LVGL-v8.3.11/src/misc/lv_timer.c
	packages/LVGL-v8.3.11/src/draw/sdl/lv_draw_sdl_rect.c
	packages/LVGL-v8.3.11/src/extra/widgets/menu/lv_menu.c
	packages/LVGL-v8.3.11/src/draw/sdl/lv_draw_sdl_texture_cache.c
	packages/LVGL-v8.3.11/src/core/lv_indev.c
	packages/LVGL-v8.3.11/src/font/lv_font_loader.c
	packages/LVGL-v8.3.11/src/misc/lv_async.c
	packages/LVGL-v8.3.11/src/draw/nxp/pxp/lv_draw_pxp_blend.c
	packages/LVGL-v8.3.11/src/extra/widgets/calendar/lv_calendar.c
	packages/LVGL-v8.3.11/src/font/lv_font_montserrat_40.c
	packages/LVGL-v8.3.11/src/widgets/lv_img.c
	packages/LVGL-v8.3.11/src/font/lv_font_unscii_8.c
	packages/LVGL-v8.3.11/src/widgets/lv_btnmatrix.c
	packages/LVGL-v8.3.11/src/font/lv_font_montserrat_12_subpx.c
	packages/LVGL-v8.3.11/src/draw/sdl/lv_draw_sdl_mask.c
	packages/LVGL-v8.3.11/src/widgets/lv_slider.c
	packages/LVGL-v8.3.11/src/extra/widgets/imgbtn/lv_imgbtn.c
	packages/LVGL-v8.3.11/src/draw/sw/lv_draw_sw_blend.c
	packages/LVGL-v8.3.11/src/core/lv_obj_draw.c
	packages/LVGL-v8.3.11/src/font/lv_font_montserrat_28.c
	packages/LVGL-v8.3.11/src/misc/lv_templ.c
	packages/LVGL-v8.3.11/src/extra/libs/fsdrv/lv_fs_fatfs.c
	packages/LVGL-v8.3.11/src/extra/themes/default/lv_theme_default.c
	packages/LVGL-v8.3.11/src/extra/libs/fsdrv/lv_fs_stdio.c
	packages/LVGL-v8.3.11/src/core/lv_indev_scroll.c
	packages/LVGL-v8.3.11/src/draw/lv_draw_triangle.c
	packages/LVGL-v8.3.11/src/draw/lv_draw_layer.c
	packages/LVGL-v8.3.11/src/font/lv_font_montserrat_24.c
	packages/LVGL-v8.3.11/src/widgets/lv_bar.c
	packages/LVGL-v8.3.11/src/draw/sw/lv_draw_sw_polygon.c
	packages/LVGL-v8.3.11/src/draw/nxp/vglite/lv_draw_vglite_arc.c
	packages/LVGL-v8.3.11/src/core/lv_obj_scroll.c
	packages/LVGL-v8.3.11/src/hal/lv_hal_disp.c
	packages/LVGL-v8.3.11/src/hal/lv_hal_tick.c
	packages/LVGL-v8.3.11/src/misc/lv_color.c
	packages/LVGL-v8.3.11/src/font/lv_font_montserrat_38.c
	packages/LVGL-v8.3.11/src/draw/renesas/lv_gpu_d2_draw_label.c
	packages/LVGL-v8.3.11/src/extra/libs/qrcode/qrcodegen.c
	packages/LVGL-v8.3.11/src/extra/widgets/span/lv_span.c
	packages/LVGL-v8.3.11/src/extra/others/fragment/lv_fragment_manager.c
	packages/LVGL-v8.3.11/src/core/lv_obj_pos.c
	packages/LVGL-v8.3.11/src/extra/lv_extra.c
	packages/LVGL-v8.3.11/src/draw/renesas/lv_gpu_d2_ra6m3.c
	packages/LVGL-v8.3.11/src/font/lv_font_montserrat_44.c
	packages/LVGL-v8.3.11/src/widgets/lv_canvas.c
	packages/LVGL-v8.3.11/src/draw/nxp/vglite/lv_draw_vglite_rect.c
	packages/LVGL-v8.3.11/src/draw/swm341_dma2d/lv_gpu_swm341_dma2d.c
	packages/LVGL-v8.3.11/src/core/lv_obj_tree.c
	packages/LVGL-v8.3.11/src/draw/lv_draw_rect.c
	packages/LVGL-v8.3.11/src/misc/lv_lru.c
	packages/LVGL-v8.3.11/src/extra/widgets/tileview/lv_tileview.c
	packages/LVGL-v8.3.11/src/draw/sw/lv_draw_sw_gradient.c
	packages/LVGL-v8.3.11/src/extra/libs/gif/lv_gif.c
	packages/LVGL-v8.3.11/src/extra/others/imgfont/lv_imgfont.c
	packages/LVGL-v8.3.11/src/font/lv_font_montserrat_18.c
	packages/LVGL-v8.3.11/src/font/lv_font.c
	packages/LVGL-v8.3.11/src/draw/arm2d/lv_gpu_arm2d.c
	packages/LVGL-v8.3.11/src/draw/lv_draw_label.c
	packages/LVGL-v8.3.11/src/draw/sdl/lv_draw_sdl_img.c
	packages/LVGL-v8.3.11/src/draw/nxp/pxp/lv_gpu_nxp_pxp.c
	packages/LVGL-v8.3.11/src/misc/lv_anim_timeline.c
	packages/LVGL-v8.3.11/src/misc/lv_utils.c
	packages/LVGL-v8.3.11/src/draw/sdl/lv_draw_sdl_polygon.c
	packages/LVGL-v8.3.11/src/draw/sw/lv_draw_sw_dither.c
	packages/LVGL-v8.3.11/src/core/lv_obj_style.c
	packages/LVGL-v8.3.11/src/font/lv_font_montserrat_42.c
	packages/LVGL-v8.3.11/src/misc/lv_style.c
	packages/LVGL-v8.3.11/src/extra/widgets/led/lv_led.c
	packages/LVGL-v8.3.11/src/draw/lv_draw_line.c
	packages/LVGL-v8.3.11/src/draw/sw/lv_draw_sw_line.c
	packages/LVGL-v8.3.11/src/draw/lv_draw_img.c
	packages/LVGL-v8.3.11/src/draw/lv_draw.c
	packages/LVGL-v8.3.11/src/hal/lv_hal_indev.c
	packages/LVGL-v8.3.11/src/misc/lv_style_gen.c
	packages/LVGL-v8.3.11/src/draw/sdl/lv_draw_sdl_composite.c
	packages/LVGL-v8.3.11/src/extra/widgets/spinbox/lv_spinbox.c
	packages/LVGL-v8.3.11/src/draw/sw/lv_draw_sw_rect.c
	packages/LVGL-v8.3.11/src/extra/widgets/keyboard/lv_keyboard.c
	packages/LVGL-v8.3.11/src/font/lv_font_montserrat_34.c
	packages/LVGL-v8.3.11/src/extra/layouts/flex/lv_flex.c
	packages/LVGL-v8.3.11/src/extra/libs/sjpg/lv_sjpg.c
	packages/LVGL-v8.3.11/src/font/lv_font_montserrat_36.c
	packages/LVGL-v8.3.11/src/misc/lv_txt.c
	packages/LVGL-v8.3.11/src/extra/widgets/chart/lv_chart.c
	packages/LVGL-v8.3.11/src/extra/libs/rlottie/lv_rlottie.c
	packages/LVGL-v8.3.11/src/extra/widgets/win/lv_win.c
	packages/LVGL-v8.3.11/src/extra/libs/fsdrv/lv_fs_littlefs.c
	packages/LVGL-v8.3.11/src/draw/sw/lv_draw_sw_layer.c
	packages/LVGL-v8.3.11/src/font/lv_font_montserrat_10.c
	packages/LVGL-v8.3.11/src/draw/sdl/lv_draw_sdl_layer.c
	packages/LVGL-v8.3.11/src/draw/nxp/vglite/lv_vglite_utils.c
	packages/LVGL-v8.3.11/src/extra/widgets/msgbox/lv_msgbox.c
	packages/LVGL-v8.3.11/src/extra/libs/tiny_ttf/lv_tiny_ttf.c
	packages/LVGL-v8.3.11/src/widgets/lv_table.c
	packages/LVGL-v8.3.11/src/extra/others/gridnav/lv_gridnav.c
	packages/LVGL-v8.3.11/src/draw/lv_draw_transform.c
	packages/LVGL-v8.3.11/src/core/lv_refr.c
	packages/LVGL-v8.3.11/src/font/lv_font_montserrat_46.c
	packages/LVGL-v8.3.11/src/misc/lv_txt_ap.c
	packages/LVGL-v8.3.11/src/widgets/lv_label.c
	packages/LVGL-v8.3.11/src/widgets/lv_textarea.c
	packages/LVGL-v8.3.11/src/extra/layouts/grid/lv_grid.c
	packages/LVGL-v8.3.11/src/extra/others/ime/lv_ime_pinyin.c
	packages/LVGL-v8.3.11/src/core/lv_obj_class.c
	packages/LVGL-v8.3.11/src/font/lv_font_montserrat_12.c
	packages/LVGL-v8.3.11/src/misc/lv_tlsf.c
	packages/LVGL-v8.3.11/src/draw/sw/lv_draw_sw_letter.c
	packages/LVGL-v8.3.11/src/extra/libs/bmp/lv_bmp.c
	packages/LVGL-v8.3.11/src/extra/widgets/calendar/lv_calendar_header_arrow.c
	packages/LVGL-v8.3.11/src/core/lv_theme.c
	packages/LVGL-v8.3.11/src/font/lv_font_montserrat_16.c
	packages/LVGL-v8.3.11/src/misc/lv_log.c
	packages/LVGL-v8.3.11/src/extra/libs/gif/gifdec.c
	packages/LVGL-v8.3.11/src/draw/sw/lv_draw_sw_transform.c
	packages/LVGL-v8.3.11/src/draw/sw/lv_draw_sw.c
	packages/LVGL-v8.3.11/src/core/lv_group.c
	packages/LVGL-v8.3.11/src/font/lv_font_dejavu_16_persian_hebrew.c
	packages/LVGL-v8.3.11/src/misc/lv_area.c
	packages/LVGL-v8.3.11/src/misc/lv_bidi.c
	packages/LVGL-v8.3.11/src/font/lv_font_montserrat_48.c
	packages/LVGL-v8.3.11/src/draw/sdl/lv_draw_sdl_label.c
	packages/LVGL-v8.3.11/src/extra/libs/png/lv_png.c
	packages/LVGL-v8.3.11/src/widgets/lv_roller.c
	packages/LVGL-v8.3.11/src/extra/widgets/tabview/lv_tabview.c
	packages/LVGL-v8.3.11/src/extra/widgets/colorwheel/lv_colorwheel.c
	packages/LVGL-v8.3.11/src/core/lv_obj.c
	packages/LVGL-v8.3.11/src/font/lv_font_montserrat_8.c
	packages/LVGL-v8.3.11/src/widgets/lv_btn.c
	packages/LVGL-v8.3.11/src/draw/sdl/lv_draw_sdl_utils.c
	packages/LVGL-v8.3.11/src/core/lv_obj_style_gen.c
	packages/LVGL-v8.3.11/src/font/lv_font_montserrat_26.c
	packages/LVGL-v8.3.11/src/misc/lv_fs.c
	packages/LVGL-v8.3.11/src/draw/sw/lv_draw_sw_arc.c
	packages/LVGL-v8.3.11/src/extra/widgets/list/lv_list.c
	packages/LVGL-v8.3.11/src/extra/libs/freetype/lv_freetype.c
	packages/LVGL-v8.3.11/src/extra/others/monkey/lv_monkey.c
	packages/LVGL-v8.3.11/src/draw/lv_draw_arc.c
	packages/LVGL-v8.3.11/src/font/lv_font_montserrat_20.c
	packages/LVGL-v8.3.11/src/font/lv_font_simsun_16_cjk.c
	packages/LVGL-v8.3.11/src/widgets/lv_checkbox.c
	packages/LVGL-v8.3.11/src/font/lv_font_fmt_txt.c
	packages/LVGL-v8.3.11/src/draw/nxp/pxp/lv_gpu_nxp_pxp_osa.c
	packages/LVGL-v8.3.11/src/extra/libs/qrcode/lv_qrcode.c
	packages/LVGL-v8.3.11/src/draw/sdl/lv_draw_sdl_bg.c
	packages/LVGL-v8.3.11/src/draw/sdl/lv_draw_sdl_stack_blur.c
	packages/LVGL-v8.3.11/src/draw/nxp/pxp/lv_draw_pxp.c
	packages/LVGL-v8.3.11/src/draw/lv_draw_mask.c
	packages/LVGL-v8.3.11/src/draw/sdl/lv_draw_sdl_arc.c
	packages/LVGL-v8.3.11/src/font/lv_font_montserrat_28_compressed.c
	packages/LVGL-v8.3.11/src/widgets/lv_arc.c
	packages/LVGL-v8.3.11/src/extra/others/fragment/lv_fragment.c
	packages/LVGL-v8.3.11/src/draw/stm32_dma2d/lv_gpu_stm32_dma2d.c
	packages/LVGL-v8.3.11/src/extra/libs/png/lodepng.c
	packages/LVGL-v8.3.11/src/extra/widgets/calendar/lv_calendar_header_dropdown.c
	packages/LVGL-v8.3.11/src/widgets/lv_line.c
	packages/LVGL-v8.3.11/src/font/lv_font_montserrat_22.c
	packages/LVGL-v8.3.11/src/misc/lv_printf.c
	packages/LVGL-v8.3.11/src/extra/widgets/animimg/lv_animimg.c
	packages/LVGL-v8.3.11/src/draw/nxp/vglite/lv_draw_vglite_blend.c
	packages/LVGL-v8.3.11/src/font/lv_font_montserrat_14.c
	packages/LVGL-v8.3.11/src/draw/sdl/lv_draw_sdl_line.c
	packages/LVGL-v8.3.11/src/font/lv_font_montserrat_32.c
	packages/LVGL-v8.3.11/src/misc/lv_mem.c
	packages/LVGL-v8.3.11/src/widgets/lv_dropdown.c
	packages/LVGL-v8.3.11/src/draw/nxp/vglite/lv_draw_vglite.c
	packages/LVGL-v8.3.11/src/extra/others/msg/lv_msg.c
	packages/LVGL-v8.3.11/src/extra/themes/mono/lv_theme_mono.c
	packages/LVGL-v8.3.11/src/misc/lv_anim.c
	packages/LVGL-v8.3.11/src/misc/lv_ll.c
	packages/LVGL-v8.3.11/src/extra/libs/sjpg/tjpgd.c
	packages/LVGL-v8.3.11/src/extra/widgets/spinner/lv_spinner.c
	packages/LVGL-v8.3.11/src/extra/libs/ffmpeg/lv_ffmpeg.c
	packages/LVGL-v8.3.11/src/extra/libs/fsdrv/lv_fs_win32.c
	packages/LVGL-v8.3.11/src/extra/others/snapshot/lv_snapshot.c
	packages/LVGL-v8.3.11/src/core/lv_event.c
	packages/LVGL-v8.3.11/src/draw/lv_img_decoder.c
	packages/LVGL-v8.3.11/src/font/lv_font_montserrat_30.c
	packages/LVGL-v8.3.11/src/misc/lv_gc.c
	packages/LVGL-v8.3.11/src/draw/sw/lv_draw_sw_img.c
	packages/LVGL-v8.3.11/src/extra/widgets/meter/lv_meter.c
	packages/LVGL-v8.3.11/src/draw/nxp/vglite/lv_vglite_buf.c
	_drv/lvgl/lv_port_disp.c
	_drv/lvgl/lv_port_indev.c
	packages/LVGL-v8.3.11/env_support/rt-thread/lv_rt_thread_port.c
	_drv/m1820/M601.c
	_drv/m1820/reg_m1820z.c
	_drv/m1820/owmy.c
	packages/mbedtls-v2.28.1/mbedtls/library/ssl_ticket.c
	packages/mbedtls-v2.28.1/mbedtls/library/hmac_drbg.c
	packages/mbedtls-v2.28.1/ports/src/des_alt.c
	packages/mbedtls-v2.28.1/mbedtls/library/padlock.c
	packages/mbedtls-v2.28.1/mbedtls/library/ssl_tls.c
	packages/mbedtls-v2.28.1/ports/src/aes_alt.c
	packages/mbedtls-v2.28.1/mbedtls/library/ctr_drbg.c
	packages/mbedtls-v2.28.1/mbedtls/library/platform_util.c
	packages/mbedtls-v2.28.1/mbedtls/library/psa_crypto_hash.c
	packages/mbedtls-v2.28.1/mbedtls/library/ssl_cache.c
	packages/mbedtls-v2.28.1/mbedtls/library/ecp.c
	packages/mbedtls-v2.28.1/mbedtls/library/x509_create.c
	packages/mbedtls-v2.28.1/ports/src/tls_hardware.c
	packages/mbedtls-v2.28.1/mbedtls/library/cmac.c
	packages/mbedtls-v2.28.1/mbedtls/library/mps_trace.c
	packages/mbedtls-v2.28.1/mbedtls/library/ssl_ciphersuites.c
	packages/mbedtls-v2.28.1/mbedtls/library/psa_crypto_slot_management.c
	packages/mbedtls-v2.28.1/mbedtls/library/ecdh.c
	packages/mbedtls-v2.28.1/ports/src/md5_alt.c
	packages/mbedtls-v2.28.1/mbedtls/library/arc4.c
	packages/mbedtls-v2.28.1/mbedtls/library/debug.c
	packages/mbedtls-v2.28.1/mbedtls/library/aria.c
	packages/mbedtls-v2.28.1/mbedtls/library/psa_crypto_mac.c
	packages/mbedtls-v2.28.1/mbedtls/library/xtea.c
	packages/mbedtls-v2.28.1/mbedtls/library/gcm.c
	packages/mbedtls-v2.28.1/mbedtls/library/pem.c
	packages/mbedtls-v2.28.1/mbedtls/library/ssl_cli.c
	packages/mbedtls-v2.28.1/mbedtls/library/psa_crypto_rsa.c
	packages/mbedtls-v2.28.1/mbedtls/library/threading.c
	packages/mbedtls-v2.28.1/mbedtls/library/hkdf.c
	packages/mbedtls-v2.28.1/mbedtls/library/x509_crt.c
	packages/mbedtls-v2.28.1/mbedtls/library/camellia.c
	packages/mbedtls-v2.28.1/mbedtls/library/bignum.c
	packages/mbedtls-v2.28.1/mbedtls/library/pk.c
	packages/mbedtls-v2.28.1/mbedtls/library/x509_crl.c
	packages/mbedtls-v2.28.1/mbedtls/library/ecjpake.c
	packages/mbedtls-v2.28.1/mbedtls/library/x509.c
	packages/mbedtls-v2.28.1/mbedtls/library/psa_crypto_se.c
	packages/mbedtls-v2.28.1/mbedtls/library/mps_reader.c
	packages/mbedtls-v2.28.1/mbedtls/library/x509write_crt.c
	packages/mbedtls-v2.28.1/mbedtls/library/chachapoly.c
	packages/mbedtls-v2.28.1/mbedtls/library/x509_csr.c
	packages/mbedtls-v2.28.1/mbedtls/library/chacha20.c
	packages/mbedtls-v2.28.1/mbedtls/library/aes.c
	packages/mbedtls-v2.28.1/mbedtls/library/ripemd160.c
	packages/mbedtls-v2.28.1/mbedtls/library/pkcs5.c
	packages/mbedtls-v2.28.1/mbedtls/library/blowfish.c
	packages/mbedtls-v2.28.1/mbedtls/library/platform.c
	packages/mbedtls-v2.28.1/mbedtls/library/rsa.c
	packages/mbedtls-v2.28.1/mbedtls/library/entropy_poll.c
	packages/mbedtls-v2.28.1/mbedtls/library/ccm.c
	packages/mbedtls-v2.28.1/mbedtls/library/nist_kw.c
	packages/mbedtls-v2.28.1/ports/src/tls_client.c
	packages/mbedtls-v2.28.1/mbedtls/library/ssl_tls13_keys.c
	packages/mbedtls-v2.28.1/ports/src/sha256_alt.c
	packages/mbedtls-v2.28.1/mbedtls/library/md5.c
	packages/mbedtls-v2.28.1/mbedtls/library/version_features.c
	packages/mbedtls-v2.28.1/mbedtls/library/ssl_msg.c
	packages/mbedtls-v2.28.1/mbedtls/library/cipher_wrap.c
	packages/mbedtls-v2.28.1/mbedtls/library/ssl_cookie.c
	packages/mbedtls-v2.28.1/mbedtls/library/cipher.c
	packages/mbedtls-v2.28.1/mbedtls/library/pkparse.c
	packages/mbedtls-v2.28.1/ports/src/tls_certificate.c
	packages/mbedtls-v2.28.1/mbedtls/library/havege.c
	packages/mbedtls-v2.28.1/mbedtls/library/pkwrite.c
	packages/mbedtls-v2.28.1/mbedtls/library/psa_crypto_ecp.c
	packages/mbedtls-v2.28.1/mbedtls/library/asn1parse.c
	packages/mbedtls-v2.28.1/mbedtls/library/poly1305.c
	packages/mbedtls-v2.28.1/mbedtls/library/sha1.c
	packages/mbedtls-v2.28.1/mbedtls/library/ecdsa.c
	packages/mbedtls-v2.28.1/mbedtls/library/aesni.c
	packages/mbedtls-v2.28.1/mbedtls/library/memory_buffer_alloc.c
	packages/mbedtls-v2.28.1/mbedtls/library/psa_its_file.c
	packages/mbedtls-v2.28.1/mbedtls/library/x509write_csr.c
	packages/mbedtls-v2.28.1/ports/src/timing_alt.c
	packages/mbedtls-v2.28.1/mbedtls/library/psa_crypto_aead.c
	packages/mbedtls-v2.28.1/mbedtls/library/sha256.c
	packages/mbedtls-v2.28.1/ports/src/rsa_alt.c
	packages/mbedtls-v2.28.1/mbedtls/library/certs.c
	packages/mbedtls-v2.28.1/mbedtls/library/md.c
	packages/mbedtls-v2.28.1/mbedtls/library/psa_crypto.c
	packages/mbedtls-v2.28.1/mbedtls/library/version.c
	packages/mbedtls-v2.28.1/mbedtls/library/entropy.c
	packages/mbedtls-v2.28.1/mbedtls/library/psa_crypto_cipher.c
	packages/mbedtls-v2.28.1/mbedtls/library/psa_crypto_storage.c
	packages/mbedtls-v2.28.1/ports/src/sha1_alt.c
	packages/mbedtls-v2.28.1/mbedtls/library/constant_time.c
	packages/mbedtls-v2.28.1/mbedtls/library/pkcs11.c
	packages/mbedtls-v2.28.1/mbedtls/library/md4.c
	packages/mbedtls-v2.28.1/mbedtls/library/sha512.c
	packages/mbedtls-v2.28.1/mbedtls/library/dhm.c
	packages/mbedtls-v2.28.1/mbedtls/library/md2.c
	packages/mbedtls-v2.28.1/mbedtls/library/psa_crypto_client.c
	packages/mbedtls-v2.28.1/mbedtls/library/asn1write.c
	packages/mbedtls-v2.28.1/mbedtls/library/ecp_curves.c
	packages/mbedtls-v2.28.1/mbedtls/library/pkcs12.c
	packages/mbedtls-v2.28.1/mbedtls/library/rsa_internal.c
	packages/mbedtls-v2.28.1/mbedtls/library/timing.c
	packages/mbedtls-v2.28.1/mbedtls/library/pk_wrap.c
	packages/mbedtls-v2.28.1/mbedtls/library/psa_crypto_driver_wrappers.c
	packages/mbedtls-v2.28.1/mbedtls/library/ssl_srv.c
	packages/mbedtls-v2.28.1/mbedtls/library/error.c
	packages/mbedtls-v2.28.1/ports/src/sha512_alt.c
	packages/mbedtls-v2.28.1/mbedtls/library/des.c
	packages/mbedtls-v2.28.1/mbedtls/library/base64.c
	packages/mbedtls-v2.28.1/ports/src/arc4_alt.c
	packages/mbedtls-v2.28.1/ports/src/tls_net.c
	packages/mbedtls-v2.28.1/mbedtls/library/oid.c
	rt-thread/components/libc/posix/io/poll/poll.c
	rt-thread/components/libc/posix/io/poll/select.c
	rt-thread/components/net/netdev/src/netdev.c
	rt-thread/components/net/netdev/src/netdev_ipaddr.c
	rt-thread/components/net/sal/dfs_net/dfs_net.c
	rt-thread/components/net/sal/socket/net_netdb.c
	rt-thread/components/net/sal/socket/net_sockets.c
	rt-thread/components/net/sal/src/sal_socket.c
	rt-thread/components/utilities/resource/resource_id.c
)

LINK_DIRECTORIES(
)

LINK_LIBRARIES(
	c
	m
)

ADD_EXECUTABLE(${CMAKE_PROJECT_NAME}.elf ${PROJECT_SOURCES})
ADD_CUSTOM_COMMAND(TARGET ${CMAKE_PROJECT_NAME}.elf POST_BUILD 
COMMAND ${CMAKE_OBJCOPY} -O binary ${CMAKE_PROJECT_NAME}.elf ${CMAKE_PROJECT_NAME}.bin COMMAND ${CMAKE_SIZE} ${CMAKE_PROJECT_NAME}.elf)